Completed Halieta references.

--- a/zaima/WhatIsZaima.html
+++ b/zaima/WhatIsZaima.html
@@ -307,7 +307,7 @@ rt.sereyu { color: #daa520; }
 ወን<ruby><rb>ጌ</rb><rt>ቡር</rt></ruby>ላ<ruby><rb>ዊ</rb><rt>ነነ</rt></ruby>፡<ruby><rb>መ</rb><rt>᎐</rt></ruby>ጥም<ruby><rb>ቀ</rb><rt>ሉ᎙</rt></ruby>፡ቃ<ruby><rb>ለ</rb><rt>᎐</rt></ruby>፡ዓዋ<ruby><rb>ዲ</rb><rt>ዚና</rt></ruby>፡ዘይስ<br/></div>
 <div class="beit tooltip">ዘዮ<span class="tooltiptext">ዘዮም፡መስቀል፡<br/>Beit (ቤት)</span></div><div class="beitscope"><ruby><rb>ብ</rb><rt>᎐</rt></ruby>ክ፡በንደ<ruby><rb>ም</rb><rt>ር</rt></ruby>፡<div id="ዘዮም_መስቀል" class="haleita tooltip" onmouseover="openMessage(this);" onmouseout="closeMessage(this);">በ<span style="color: red;">፪</span><span class="tooltiptext">Halleluya Number<br/>(ሃሌታ)</span></div><ruby><rb>ካ</rb><rt>᎑</rt><rb>ህን</rb><rt>ብራ</rt></ruby>፡<ruby><rb>ወ</rb><rt>᎐</rt><rb>ነ</rb><rt>᎖</rt></ruby>ቢይ</rb><rt>ነየ</rt></ruby>፡ወን<ruby><rb>ጌ</rb><rt>᎑</rt></ruby><br/>
 ላ<ruby><rb>ዊ</rb><rt>ው</rt></ruby>፡<ruby><rb>መ</rb><rt>᎑</rt></ruby>ጥም<ruby><rb>ቀ</rb><rt>ው</rt></ruby>፡<ruby><rb>ቃ</rb><rt>ከመ </rt></ruby>ለ፡<ruby><rb>ዓ</rb><rt>᎖</rt></ruby>ዋ<ruby><rb>ዲ</rb><rt>ንጋ</rt></ruby>፡ዘይ<ruby><rb>ሰ</rb><rt>ብራ</rt></ruby>ብክ፡<ruby><rb>በ</rb><rt>᎐</rt></ruby>ገ<br/></div>
-<div class="beit tooltip">ጣ<span class="tooltiptext">ዕጣነ፡ሞገር፡ወደሞ፡ክቡረ፡<br/>Beit (ቤት)</span></div><div class="beitscope">ደ<ruby><rb>ም</rb><rt>ኔሃ</rt></ruby>፡<div class="haleita tooltip">በ<span style="color: red;">፪</span><span class="tooltiptext">Halleluya Number<br/>(ሃሌታ)</span></div>ዮ<ruby><rb>ሐን</rb><rt>ይሠ </rt></ruby>ስ፡<ruby><rb>ክ</rb><rt>᎓</rt><rb>ቡር</rb><rt style="text-align: right;">ንከ᎖</rt></ruby>፡አር<ruby><rb>ኩ</rb><rt>ነዋ</rt></ruby>፡ሰመር<br/>
+<div class="beit tooltip">ግ<span class="tooltiptext">ዴግንዋ፡<br/>Beit (ቤት)</span></div><div class="beitscope">ደ<ruby><rb>ም</rb><rt>ኔሃ</rt></ruby>፡<div id="ዴግንዋ" class="haleita tooltip" onmouseover="openMessage(this);" onmouseout="closeMessage(this);">በ<span style="color: red;">፪</span><span class="tooltiptext">Halleluya Number<br/>(ሃሌታ)</span></div>ዮ<ruby><rb>ሐን</rb><rt>ይሠ </rt></ruby>ስ፡<ruby><rb>ክ</rb><rt>᎓</rt><rb>ቡር</rb><rt style="text-align: right;">ንከ᎖</rt></ruby>፡አር<ruby><rb>ኩ</rb><rt>ነዋ</rt></ruby>፡ሰመር<br/>
 <ruby><rb>ዓ</rb><rt>᎐</rt><rb>ዊ</rb><rt>ግዑ </rt></ruby>፡ዮ<ruby><rb>ሐ</rb><rt>᎔</rt></ruby>ን<ruby><rb>ስ</rb><rt>ርሡ </rt></ruby>፡ብእ<ruby><rb>ሲ</rb><rt>᎔</rt></ruby>፡ወንጌላ<ruby><rb>ዊ</rb><rt>ር</rt></ruby>፡<ruby><rb>ዮ</rb><rt>᎑</rt><rb>ሐን</rb><rt>አጻ</rt></ruby>ስ፡<br/>
 ወአዝ<ruby><rb>ማ</rb><rt>᎑</rt><rb>ዱ</rb><rt>፴</rt></ruby>፡ዘሥ<ruby><rb>ጋ</rb><rt>᎖</rt></ruby>፡ተስም<ruby><rb>የ</rb><rt>ሰን </rt></ruby>፡ዮ<ruby><rb>ሐ</rb><rt>ይሠ</rt></ruby>ንስ፡<ruby><rb>አ</rb><rt>᎐</rt></ruby><br/>
 ጥመ<ruby><rb>ቶ</rb><rt>ዚኦ </rt></ruby>፡ዮ<ruby><rb>ሐ</rb><rt>᎑</rt><rb>ን</rb><rt>᎒</rt></ruby>ስ፡ለ<ruby><rb>ኢ</rb><rt>᎐</rt></ruby>የሱ<ruby><rb>ስ</rb><rt>ዑ</rt></ruby>፡ዮ<ruby><rb>ሐ</rb><rt>ፒር</rt><rb>ንስ</rb><rt>ርሡ</rt></ruby>፡ወ
@@ -318,24 +318,31 @@ rt.sereyu { color: #daa520; }
 </section>
 <div class="ዘተናገሮ haleita-message" style="display:none;">
   <ruby>
-    <rb>ሃ</rb><rt></rt><rb>ሌ</rb><rt>ጸ</rt><rb>፡ሃ</rb><rt></rt><rb>ሌ</rb><rt>ው</rt><rb>፡ሉ</rb><rt></rt><rb>ያ</rb><rt>ቡር</rt>
-    <rb>፡ዘ</rb><rt></rt><rb>ተ</rb><rt></rt><rb>ናገ</rb><rt></rt><rb style="text-decoration: underline;">ሮ</rb><rt>ዘበ</rt>፡
+    <rb>ሃ</rb><rt></rt><rb>ሌ</rb><rt>᎑</rt><rb>፡ሃ</rb><rt></rt><rb>ሌ</rb><rt>ጸ</rt><rb>፡ሉ</rb><rt></rt><rb>ያ</rb><rt>ው</rt>
+    <rb>፡ዘ</rb><rt></rt><rb>ተ</rb><rt>ቡር</rt><rb>ናገ</rb><rt></rt><rb style="text-decoration: underline;">ሮ</rb><rt>ዘበ</rt>፡
   </ruby>
 </div>
 <div class="ዘዮም_መስቀል haleita-message" style="display:none;">
   <ruby>
-    <rb>ሃ</rb><rt>᎔</rt><rb>ሌ</rb><rt>፡</rt><rb>፡ሃ</rb><rt></rt><rb>ሌ</rb><rt>᎐</rt><rb>፡ሉ</rb><rt></rt>
-    <rb>ያ</rb><rt>ነነ᎐</rt><rb>፡</rb><rt></rt><rb style="text-decoration: underline;">ዘ</rb><rt></rt><rb style="text-decoration: underline;">ዮ</rb><rt>᎖</rt><rb>ም፡</rb><rt></rt><rb>መ</rb><rt>መን</rt>
+    <rb>ሃ</rb><rt>᎔</rt><rb>ሌ</rb><rt>፡</rt><rb>፡ሃ</rb><rt></rt><rb>ሌ</rb><rt>᎐</rt><rb>፡ሉ</rb><rt></rt><rb>ያ</rb><rt>ነነ፡</rt><rb>፡</rb><rt></rt>
+    <rb style="text-decoration: underline;">ዘ</rb><rt></rt><rb style="text-decoration: underline;">ዮ</rb><rt>᎖</rt><rb>ም፡</rb><rt></rt><rb>መ</rb><rt>መን</rt>
   </ruby>ስቀል፡
 </div>
 <div class="ስምዑ_ዘንተ haleita-message" style="display:none;">
   <ruby>
-    <rb>ሃ</rb><rt>ፈ᎖</rt><rb>ሌ</rb><rt></rt><rb>ሉ</rb><rt></rt><rb>ያ</rb><rt>ም᎐</rt><rb>፡</rb><rt></rt>
-    <rb>ሃ</rb><rt>᎖</rt><rb>ሌ</rb><rt>ሮ</rt><rb>፡ሉ</rb><rt>᎖</rt><rb>ያ</rb><rt>ነቢ </rt><rb>፡</rb><rt></rt>
-    <rb>ሃ</rb><rt></rt><rb>ሌ</rb><rt>በጸ</rt><rb>ሉ</rb><rt></rt><rb>ያ</rb><rt>ብር </rt><rb>፡</rb><rt></rt>
+    <rb>ሃ</rb><rt>ኬ</rt><rb>ሌ፡ሉ</rb><rt></rt><rb>ያ</rb><rt>ሆ᎙</rt><rb>፡</rb><rt></rt>
+    <rb>ሃ</rb><rt>᎖</rt><rb>ሌ</rb><rt>ሮ</rt><rb>፡</rb><rt></rt>ሉ</rb><rt>᎖</rt><rb>ያ</rb><rt>ነቢ</rt><rb>፡</rb><rt></rt>
+    <rb>ሃ</rb><rt></rt><rb>ሌ</rb><rt>በጸ</rt><rb>ሉ</rb><rt></rt><rb>ያ</rb><rt>ብር</rt><rb>፡</rb><rt></rt>
     <rb>ሃ</rb><rt></rt><rb>ሌ</rb><rt>᎑</rt><rb>ሉያ</rb><rt>ዩ᎙</rt><rb>፡</rb><rt></rt>
     <rb>ስ</rb><rt></rt><rb>ም</rb><rt>᎐</rt><rb style="text-decoration: underline;">ዑ</rb><rt>ዑ</rt>፡ዘን<rb>ተ</rb><rt>᎐</rt></ruby>፡
   </div>
+<div class="ዴግንዋ haleita-message" style="display:none;">
+  <ruby>
+    <rb>ሃ</rb><rt>᎐</rt><rb>ሌ</rb><rt>ቡ</rt><rb>፡ሉ</rb><rt>᎑</rt><rb>ያ፡</rb><rt>ወለ᎙</rt>
+    <rb>ሃ</rb><rt>᎐</rt><rb>ሌ</rb><rt>ሑሩ</rt><rb>፡</rb><rb>ሉ</rb><rt></rt><rb>ያ</rb><rt>ር</rt>
+    <rb>፡ዴ<span style="text-decoration: underline;">ግ</span></rb><rt></rt><rb>ን</rb><rt>᎐</rt><rb>ዋ</rb><rt>ነ</rt>፡
+  </ruby>
+</div>
 </section>
 
 
