Removed a TBD and added note to direct reader to hover mouse over components.

--- a/zaima/WhatIsZaima.html
+++ b/zaima/WhatIsZaima.html
@@ -280,10 +280,8 @@ rt.sereyu { color: #daa520; }
 
   <section>
   <h3 id="components-sample"><a href="#components-sample">Sample from The Digua (ድጓ)</a></h3>
-  <p>The components of zaima are depicted in the following exert from The Digua</p>
-  <p><em>[TBD: Finish dereferencing data in haleita tooltips ]</em></p>
-
-<!-- use the technique here to present te haleita in a popup: https://jsfiddle.net/hwsamuel/fsp5pgqw/ -->
+  <p>The components of zaima are depicted in the following exert from The Digua.  Hover mouse pointer over the various components on the right side
+     to view scope and reference expansions.</p>
 
 <div>
 <div style="margin-left: 80px; margin-right: 160px; float:left; height: 800px">
